turtleart.stairs.Stairs.scala.error
Erreur de compilation :
Stairs:6: error: not found: value avace
    avace(35)
    ^