turtleart.stairs.Stairs.scala.code
override def run() {
  for(i <- 1 to 6) {
  	for (j <- 1 to 2)
    avance(35)
  	droite(90)
    avace(35)
    gauche(90)
  }
}